# stfu

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  settings.py
