[tool.poetry]
name = "stfu-robot"
version = "0.1.0"
description = "STFU Telegram bot"
authors = ["ape364 <ape364@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.6.1"
python-dotenv = "^0.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
